# sdl

./: CMakeLists.txt  README.md
ci/: Makefile
ci/docker/web/: Dockerfile
cmake/: MizuxConfig.cmake.in
tmp/: gears.cpp  triangle.cpp  white_triangle.cpp
